React project: several HTML components, employee and employeeList; employeeDataFetch service; Router for logged in users

--- a/src/main/webapp/WEB-INF/view/react-app/src/index.css
+++ b/src/main/webapp/WEB-INF/view/react-app/src/index.css
@@ -59,3 +59,16 @@ input {
   border-radius: .25rem;
   margin: 0;
 }
+
+body {
+  margin: 0;
+  padding: 2rem;
+  font-family: sans-serif;
+}
+.active{
+  color:red;
+}
+
+.container, .container-fluid {
+  margin-top: 20px;
+}
