--- a/src/main/webapp/WEB-INF/view/react-app/src/index.css
+++ b/src/main/webapp/WEB-INF/view/react-app/src/index.css
@@ -1,93 +1,98 @@
 body {
-  font-family: "Open Sans", "Roboto", arial, sans-serif;
-  background: #e9e9e9;
+    font-family: "Open Sans", "Roboto", arial, sans-serif;
+    background: #e9e9e9;
 }
 
 #root {
-  position: absolute;
-  top:55%;
-  right: 0;
-  left: 0;
-  margin-right: auto;
-  margin-left: auto;
-  transform: translateY(-50%);
-  overflow: hidden;
-  align-items: center;
-  justify-content: center;
-  width: 100%;
-  height: 110%;
-  border-radius: .19rem;
-  box-shadow: 0px .19rem .41rem rgba(0,0,0,.25);
+    position: absolute;
+    top: 55%;
+    right: 0;
+    left: 0;
+    margin-right: auto;
+    margin-left: auto;
+    transform: translateY(-50%);
+    overflow: hidden;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 110%;
+    border-radius: .19rem;
+    box-shadow: 0px .19rem .41rem rgba(0, 0, 0, .25);
 }
 
 form {
-  height: 100%;
-  padding: 1.5rem;
-  background: #fafafa;
+    height: 100%;
+    padding: 1.5rem;
+    background: #fafafa;
 }
 
 input {
-  background-color: transparent;
-  border-top: 0;
-  border-right: 0;
-  border-left: 0;
-  border-radius: 0;
-  color: #111;
-  font-size: 1rem;
-  padding: .3rem .5rem;
-  margin-bottom: 1rem;
-  display: block;
+    background-color: transparent;
+    border-top: 0;
+    border-right: 0;
+    border-left: 0;
+    border-radius: 0;
+    color: #111;
+    font-size: 1rem;
+    padding: .3rem .5rem;
+    margin-bottom: 1rem;
+    display: block;
 }
 
 .input-error {
-  border-color: #FF0000;
+    border-color: #FF0000;
 }
 
 .error {
-  color: #FF0000;
-  padding: .2rem;
+    color: #FF0000;
+    padding: .2rem;
 }
 
 .btn {
-  padding: .5rem 1.5rem;
-  font-size: .85rem;
-  font-weight: 600;
-  text-transform: uppercase;
-  color: #fff;
-  background: #111;
-  border-radius: .25rem;
-  margin: 0;
+    padding: .5rem 1.5rem;
+    font-size: .85rem;
+    font-weight: 600;
+    text-transform: uppercase;
+    color: #fff;
+    background: #111;
+    border-radius: .25rem;
+    margin: 0;
 }
 
 body {
-  margin: 0;
-  padding: 2rem;
-  font-family: sans-serif;
+    margin: 0;
+    padding: 2rem;
+    font-family: sans-serif;
 }
 
 .container, .container-fluid {
-  margin-top: 20px;
+    margin-top: 20px;
 }
 
 .navbar-brand {
-  display: flex;
-  align-items: center;
-}
-.navbar-brand>img {
-  padding: 7px 14px;
-  height: 60px;
-  width: 180px;
+    display: flex;
+    align-items: center;
 }
 
-.navbar-nav>li, .navbar-nav>dropdown-toggle, .navbar-nav>nav-link {
-  padding-left: 10px;
-  padding-right: 10px;
-  display: compact;
+.navbar-brand > img {
+    padding: 7px 14px;
+    height: 60px;
+    width: 180px;
 }
 
-.links, .nav-item>.nav-link, .dropdown-toggle>.nav-link {
-  padding: 0;
-  color: #007bff;
-  font-family: "Open Sans", "Roboto", arial, sans-serif;
-  text-align: right;
+.navbar-nav > li, .navbar-nav > dropdown-toggle, .navbar-nav > nav-link {
+    padding-left: 10px;
+    padding-right: 10px;
+    display: compact;
+}
+
+.links, .nav-item > .nav-link, .dropdown-toggle > .nav-link {
+    padding: 0;
+    color: #007bff;
+    font-family: "Open Sans", "Roboto", arial, sans-serif;
+    text-align: right;
+}
+
+.hidden {
+    display: none;
 }
